[gd_scene load_steps=12 format=3 uid="uid://bsjnyrvgxtoyl"]

[ext_resource type="Script" path="res://Scripts/bathroom_controller.gd" id="1_ylkm4"]
[ext_resource type="Texture2D" uid="uid://rh68so2gabg3" path="res://Arts/bars/bathroom_button2.png" id="2_5ybjr"]
[ext_resource type="Texture2D" uid="uid://dnpqfa27cbxmo" path="res://Arts/bars/bathroom_button1.png" id="3_p22he"]
[ext_resource type="Script" path="res://Scripts/bathroom_countdown.gd" id="4_me27m"]
[ext_resource type="Texture2D" uid="uid://di0237rvxxvql" path="res://Arts/bubbles/bubble_progress_under.png" id="5_y2gnu"]
[ext_resource type="Texture2D" uid="uid://q5vhc6gphw18" path="res://Arts/bubbles/bubble_progress_over.png" id="6_x23iv"]
[ext_resource type="Texture2D" uid="uid://cr13kvefuqmns" path="res://Arts/bubbles/bubble_progress.png" id="7_wigr5"]
[ext_resource type="Texture2D" uid="uid://con06co5dtyyv" path="res://Arts/bars/bathroom_bar_under.png" id="8_lxlkf"]
[ext_resource type="Texture2D" uid="uid://b5s6041w8n3ht" path="res://Arts/bars/bathroom_bar_over.png" id="9_03ke7"]
[ext_resource type="Texture2D" uid="uid://bbba2bf7nfyq2" path="res://Arts/bars/bathroom_bar_progress.png" id="10_upslu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2pt3q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5ybjr")
}, {
"duration": 1.0,
"texture": ExtResource("3_p22he")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="BathroomControl" type="Node2D"]
script = ExtResource("1_ylkm4")

[node name="BathroomButton" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_2pt3q")

[node name="ClickDetect" type="Control" parent="BathroomButton"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -56.5
offset_right = -1.0
offset_bottom = -1.5
grow_horizontal = 2
grow_vertical = 2

[node name="BathroonBar" type="TextureProgressBar" parent="."]
offset_left = 48.0
offset_top = -56.0
offset_right = 58.0
offset_bottom = 2.0
scale = Vector2(2, 2)
max_value = 10.0
step = 0.1
value = 1.0
fill_mode = 3
texture_under = ExtResource("8_lxlkf")
texture_over = ExtResource("9_03ke7")
texture_progress = ExtResource("10_upslu")

[node name="CountdownDisplay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = -73.0
offset_right = 16.0
offset_bottom = -73.0
script = ExtResource("4_me27m")
metadata/_edit_group_ = true

[node name="Progress" type="TextureProgressBar" parent="CountdownDisplay"]
layout_mode = 0
offset_right = 18.0
offset_bottom = 18.0
scale = Vector2(2, 2)
step = 0.01
value = 100.0
fill_mode = 4
texture_under = ExtResource("5_y2gnu")
texture_over = ExtResource("6_x23iv")
texture_progress = ExtResource("7_wigr5")
